--- a/Agent.yaml
+++ b/Agent.yaml
@@ -12,7 +12,8 @@ spec:
   agent:
     provider: ""
     model: ""
-    systemPrompt: "You are a helpful weather assistant."
+    systemPrompt: |
+      You are a helpful assistant for managing and searching through Documentations queries. You can use MCP Client context7 for searching docs.
     maxTokens: 4096
     temperature: 0.7
   tools:
