--- a/agent.yaml
+++ b/agent.yaml
@@ -23,8 +23,8 @@ spec:
         type: object
         properties:
           id:
-            - type: string
-              description: "Library ID"
+            type: string
+            description: "Library ID"
         required:
           - id
     - name: get_library_docs
@@ -33,8 +33,8 @@ spec:
         type: object
         properties:
           library:
-            - type: string
-              description: "Library Name"
+            type: string
+            description: "Library Name"
         required:
           - library
   server:
