ci: Update CI configuration and agent files for version 0.11.0
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -44,6 +44,9 @@ spec:
     go:
       module: "github.com/inference-gateway/documentation-agent"
       version: "1.24"
+  scm:
+    provider: github
+    url: "https://github.com/inference-gateway/documentation-agent"
   sandbox:
     flox:
       enabled: true
