chore: Update generated files and configurations to version 0.12.2; add new card properties in agent.yaml
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -9,6 +9,12 @@ spec:
     streaming: true
     pushNotifications: false
     stateTransitionHistory: true
+  card:
+    protocolVersion: "0.3.0"
+    preferredTransport: "JSONRPC"
+    defaultInputModes: ["text"]
+    defaultOutputModes: ["text"]
+    documentationUrl: "https://docs.inference-gateway.com"
   agent:
     provider: ""
     model: ""
