--- a/agent.yaml
+++ b/agent.yaml
@@ -10,11 +10,12 @@ spec:
     pushNotifications: false
     stateTransitionHistory: true
   card:
+    url: "http://localhost:8080"
+    documentationUrl: "https://docs.inference-gateway.com"
     protocolVersion: "0.3.0"
     preferredTransport: "JSONRPC"
     defaultInputModes: ["text"]
     defaultOutputModes: ["text"]
-    documentationUrl: "https://docs.inference-gateway.com"
   agent:
     provider: ""
     model: ""
