--- a/example/.env.agent.example
+++ b/example/.env.agent.example
@@ -5,3 +5,7 @@ A2A_AGENT_URL=http://localhost:8080
 A2A_AGENT_CLIENT_PROVIDER=deepseek
 A2A_AGENT_CLIENT_MODEL=deepseek-chat
 A2A_AGENT_CLIENT_BASE_URL=http://inference-gateway:8080/v1
+A2A_SERVER_READ_TIMEOUT=120s
+A2A_SERVER_WRITE_TIMEOUT=120s
+A2A_SERVER_IDLE_TIMEOUT=120s
+A2A_AGENT_CLIENT_TIMEOUT=120s
