--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,7 +11,7 @@ vars:
 tasks:
   generate:
     desc: Generate code from ADL
-    cmd: adl generate --file agent.yaml --output . --overwrite --ci --deployment kubernetes 
+    cmd: adl generate --file agent.yaml --output . --overwrite --ci --deployment kubernetes --cd
 
   build:
     desc: Build the application
