--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -99,7 +99,7 @@ jobs:
           # Check if there are no changes
           if $(echo "$DRY_OUTPUT" | grep -q "no new version is released"); then
             echo "No new release needed"
-            echo "new_release_published=false" >> $$GITHUB_OUTPUT
+            echo "new_release_published=false" >> $GITHUB_OUTPUT
             exit 0
           fi
 
@@ -111,12 +111,12 @@ jobs:
             exit 1
           fi
 
-          echo "new_release_version=$VERSION" >> $$GITHUB_OUTPUT
+          echo "new_release_version=$VERSION" >> $GITHUB_OUTPUT
 
           # Run actual release
           if semantic-release; then
             echo "Successfully released version $VERSION"
-            echo "new_release_published=true" >> $$GITHUB_OUTPUT
+            echo "new_release_published=true" >> $GITHUB_OUTPUT
           else
             echo "Release failed"
             exit 1
