--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
           private-key: ${{ secrets.BOT_GH_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
           repositories: |
-            documentation-agent
+            ${{ github.event.repository.name }}
 
       - name: Get GitHub App User ID
         id: get-user-id
@@ -47,7 +47,6 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
           token: ${{ steps.app-token.outputs.token }}
-
       - name: Set up Go
         uses: actions/setup-go@v5.5.0
         with:
@@ -155,7 +154,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/documentation-agent
+          images: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -173,3 +172,29 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  deploy:
+    name: Deploy Application
+    runs-on: ubuntu-24.04
+    needs:
+      - release
+      - build_and_push_image
+    if: needs.release.outputs.new_release_published == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+        with:
+          ref: ${{ github.ref }}
+          fetch-depth: 0
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v4
+        
+      - name: Deploy to Kubernetes
+        run: |
+          echo "Deploying to Kubernetes cluster..."
+          # Replace image tag with the released version
+          sed -i 's|:latest|:${{ needs.release.outputs.new_release_version }}|g' k8s/deployment.yaml
+          kubectl apply -f k8s/
+        env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }}
