style: Format YAML arrays for default input/output modes and library tags
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -14,8 +14,10 @@ spec:
     documentationUrl: "https://docs.inference-gateway.com"
     protocolVersion: "0.3.0"
     preferredTransport: "JSONRPC"
-    defaultInputModes: ["text"]
-    defaultOutputModes: ["text"]
+    defaultInputModes:
+      - text
+    defaultOutputModes:
+      - text
   agent:
     provider: ""
     model: ""
@@ -41,7 +43,9 @@ spec:
     - id: get_library_docs
       name: get_library_docs
       description: "Fetches up-to-date documentation for a library using Context7-compatible library ID"
-      tags: ["docs", "libraries"]
+      tags:
+        - docs
+        - libraries
       schema:
         type: object
         properties:
