style: Format tags in resolve_library_id skill for consistency
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -29,7 +29,9 @@ spec:
     - id: resolve_library_id
       name: resolve_library_id
       description: "Resolves library name to Context7-compatible library ID and returns matching libraries"
-      tags: ["docs", "libraries"]
+      tags:
+        - docs
+        - libraries
       schema:
         type: object
         properties:
