refactor: Add @semantic-release/exec plugin for version update in agent.yaml
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -83,7 +83,8 @@ jobs:
             conventional-changelog-conventionalcommits \
             @semantic-release/changelog \
             @semantic-release/git \
-            @semantic-release/github
+            @semantic-release/github \
+            @semantic-release/exec
 
       - name: Create a release if needed
         id: semantic
