fix: Add installation step for ADL CLI in CI/CD workflow
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,6 +62,11 @@ jobs:
         with:
           version: 3.x
 
+      - name: Install ADL CLI
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/inference-gateway/adl-cli/main/install.sh | bash
+          adl --version
+
       - name: Download dependencies
         run: go mod download
 
