fix: Improve Docker build command with OCI image labels and conditional logic for release channels
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -60,10 +60,25 @@ plugins:
       publishCmd: |
         echo "Building and pushing Docker image for version ${nextRelease.version}"
         REPO_LOWER=$(echo "$GITHUB_REPOSITORY" | tr '[:upper:]' '[:lower:]')
-        docker buildx build --platform linux/amd64,linux/arm64 \
-          --tag ghcr.io/$REPO_LOWER:${nextRelease.version} \
-          --tag ghcr.io/$REPO_LOWER:latest \
-          --push .
+        
+        if [[ "$GITHUB_REF_NAME" == rc/* ]]; then
+          docker buildx build --platform linux/amd64,linux/arm64 \
+            --label "org.opencontainers.image.source=https://github.com/${GITHUB_REPOSITORY}" \
+            --label "org.opencontainers.image.description=Intelligent documentation retrieval agent that resolves library names and fetches targeted documentation from Context7-compatible sources" \
+            --label "org.opencontainers.image.version=${nextRelease.version}" \
+            --label "org.opencontainers.image.title=documentation-agent" \
+            --tag ghcr.io/$REPO_LOWER:${nextRelease.version} \
+            --tag ghcr.io/$REPO_LOWER:latest \
+            --push .
+        else
+          docker buildx build --platform linux/amd64,linux/arm64 \
+            --label "org.opencontainers.image.source=https://github.com/${GITHUB_REPOSITORY}" \
+            --label "org.opencontainers.image.description=Intelligent documentation retrieval agent that resolves library names and fetches targeted documentation from Context7-compatible sources" \
+            --label "org.opencontainers.image.version=${nextRelease.version}" \
+            --label "org.opencontainers.image.title=documentation-agent" \
+            --tag ghcr.io/$REPO_LOWER:${nextRelease.version} \
+            --push .
+        fi
 
   - - '@semantic-release/git'
     - assets:
