--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -61,22 +61,23 @@ plugins:
         echo "Building and pushing Docker image for version ${nextRelease.version}"
         REPO_LOWER=$(echo "$GITHUB_REPOSITORY" | tr '[:upper:]' '[:lower:]')
         DESCRIPTION="Intelligent documentation retrieval agent that resolves library names and fetches targeted documentation from Context7-compatible sources"
+        TITLE="documentation-agent"
         
         if [[ "$GITHUB_REF_NAME" == rc/* ]]; then
           docker buildx build --platform linux/amd64,linux/arm64 \
-            --annotation "org.opencontainers.image.source=https://github.com/$REPO_LOWER" \
-            --annotation "org.opencontainers.image.description=$DESCRIPTION" \
-            --annotation "org.opencontainers.image.version=${nextRelease.version}" \
-            --annotation "org.opencontainers.image.title=documentation-agent" \
+            --annotation "index:org.opencontainers.image.source=https://github.com/$REPO_LOWER" \
+            --annotation "index:org.opencontainers.image.description=$DESCRIPTION" \
+            --annotation "index:org.opencontainers.image.version=${nextRelease.version}" \
+            --annotation "index:org.opencontainers.image.title=$TITLE" \
             --tag ghcr.io/$REPO_LOWER:${nextRelease.version} \
             --tag ghcr.io/$REPO_LOWER:latest \
             --push .
         else
           docker buildx build --platform linux/amd64,linux/arm64 \
-            --annotation "org.opencontainers.image.source=https://github.com/$REPO_LOWER" \
-            --annotation "org.opencontainers.image.description=$DESCRIPTION" \
-            --annotation "org.opencontainers.image.version=${nextRelease.version}" \
-            --annotation "org.opencontainers.image.title=documentation-agent" \
+            --annotation "index:org.opencontainers.image.source=https://github.com/$REPO_LOWER" \
+            --annotation "index:org.opencontainers.image.description=$DESCRIPTION" \
+            --annotation "index:org.opencontainers.image.version=${nextRelease.version}" \
+            --annotation "index:org.opencontainers.image.title=$TITLE" \
             --tag ghcr.io/$REPO_LOWER:${nextRelease.version} \
             --push .
         fi
