ci: Add validation task for ADL in Taskfile and CI workflow
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,10 @@ jobs:
       uses: arduino/setup-task@v2
       with:
         version: 3.x
-    
+
+    - name: Validate ADL
+      run: task validate
+
     - name: Download dependencies
       run: go mod download
     
