ci: Install ADL CLI in CI workflow
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
       with:
         version: 3.x
 
+    - name: Install ADL CLI
+      run: |
+        curl -fsSL https://raw.githubusercontent.com/inference-gateway/adl-cli/main/install.sh | bash
+        adl --version
+
     - name: Validate ADL
       run: task validate
 
