refactor: Update Go version to 1.25.0 and ADL CLI version to 0.21.4; revise documentation and descriptions
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/agent.yaml
+++ b/agent.yaml
@@ -2,8 +2,8 @@ apiVersion: adl.dev/v1
 kind: Agent
 metadata:
   name: documentation-agent
-  description: "Intelligent documentation retrieval agent that resolves library names and fetches targeted documentation from Context7-compatible sources"
-  version: "0.2.18"
+  description: A2A agent server that provides Context7-style documentation capabilities for your agents
+  version: 0.2.18
 spec:
   capabilities:
     streaming: true
@@ -70,7 +70,7 @@ spec:
   language:
     go:
       module: "github.com/inference-gateway/documentation-agent"
-      version: "1.24.5"
+      version: "1.25.0"
   scm:
     provider: github
     url: "https://github.com/inference-gateway/documentation-agent"
