refactor: Update ADL CLI version to 0.21.6 and modify agent metadata file references
Signed-off-by: Eden Reich <eden.reich@gmail.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -20,7 +20,7 @@ k8s/*.yaml linguist-generated=true
 k8s/*.yml linguist-generated=true
 
 # Agent capabilities
-.well-known/agent.json linguist-generated=true
+.well-known/agent-card.json linguist-generated=true
 
 # Documentation (partially generated)
 README.md linguist-documentation=true
